--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,8 @@
         "laravel/framework": "5.4.*",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0",
-        "netshell/paypal": "^1.1",
-        "socialiteproviders/paypal": "^3.0"
+        "paypal/rest-api-sdk-php": "^1.11",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
